--- a/quizmania/templates/quizmania/pages/home.html
+++ b/quizmania/templates/quizmania/pages/home.html
@@ -27,17 +27,32 @@
     <main class="main-container">
         <div class="main container">
             <h2 class="want-play">O que deseja jogar?</h2>
-        <div class="quizes-container">
-            <div class="quizes">
-                <div class="quiz-single">
-                    <h3 class="quiz-title">Sobrevivência</h3>
-                    <p class="quiz-category">Categoria: <span>Mitologia</span></p>
-                    <p class="quiz-description">
-                        Você tem 3 vidas, veja o quanto aguenta...
-                    </p>
+            <div class="quizes-container">
+                <div class="quizes">
+                    <div class="quiz-single">
+                        <h3 class="quiz-title">Sobrevivência</h3>
+                        <img class="single-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/68/Hephaistos_temple_2006.jpg/1200px-Hephaistos_temple_2006.jpg" >
+                        <div class="quiz-content">
+                            
+                            <p class="quiz-category">Categoria: <span>Mitologia</span></p>
+                            <p class="quiz-description">
+                                Você tem 3 vidas, veja o quanto aguenta...
+                            </p>
+                        </div>
+                    </div>
+                    <div class="quiz-single">
+                        <h3 class="quiz-title">Sobrevivência</h3>
+                        <img class="single-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/68/Hephaistos_temple_2006.jpg/1200px-Hephaistos_temple_2006.jpg" >
+                        <div class="quiz-content">
+                            
+                            <p class="quiz-category">Categoria: <span>Mitologia</span></p>
+                            <p class="quiz-description">
+                                ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
         </div>
     </main>
     <footer class="footer-container">
