--- a/quizmania/templates/quizmania/pages/home.html
+++ b/quizmania/templates/quizmania/pages/home.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/fontawesome.min.css" integrity="sha512-lauN4D/0AgFUGvmMR+knQnbOADyD/XuQ8VF18I8Ll0+TLvsujshyxvU+uzogmQbSq6qJd5jnUdYtK8ShxXMlSg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/brands.min.css" integrity="sha512-7rXIvd/xj1FnI2zKQjjXzDFxC4twqBByp8yxOgEQJs4C/aNzNyoQsOO7VxH0RgYNhbAYLJLwzqslaP50KTTHIQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/solid.min.css" integrity="sha512-bdqdas3Yr82pkTg5i0X1gcAT3tBXz/8H3J1ec7RyEKAvr/YiSCJNV2dnkukmL8CicjKb9rxmd+ILK8Kg2o2wvQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="{% static "global/js/Slick/slick.js" %}">
     <title>QuizMania</title>
 </head>
 <body>
@@ -28,29 +29,24 @@
         <div class="main container">
             <h2 class="want-play">O que deseja jogar?</h2>
             <div class="quizes-container">
+                <button class="scroll-left scroll-button"><i class="fa-solid fa-caret-right"></i></button>
+                <button class="scroll-right scroll-button"><i class="fa-solid fa-caret-right"></i></button>
                 <div class="quizes">
-                    <div class="quiz-single">
-                        <h3 class="quiz-title">Sobrevivência</h3>
-                        <img class="single-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/68/Hephaistos_temple_2006.jpg/1200px-Hephaistos_temple_2006.jpg" >
-                        <div class="quiz-content">
+                    
+                    {% for i in range %}
+                        <div class="quiz-single">
+                            <h3 class="quiz-title">Sobrevivência({{ i }})</h3>
+                            <img class="single-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/68/Hephaistos_temple_2006.jpg/1200px-Hephaistos_temple_2006.jpg" >
+                            <div class="quiz-content">
+                                
+                                <p class="quiz-category">Categoria: <span>Mitologia</span></p>
+                                <p class="quiz-description">
+                                    Você tem 3 vidas, veja o quanto aguenta...
+                                </p>
+                            </div>
                             
-                            <p class="quiz-category">Categoria: <span>Mitologia</span></p>
-                            <p class="quiz-description">
-                                Você tem 3 vidas, veja o quanto aguenta...
-                            </p>
                         </div>
-                    </div>
-                    <div class="quiz-single">
-                        <h3 class="quiz-title">Sobrevivência</h3>
-                        <img class="single-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/68/Hephaistos_temple_2006.jpg/1200px-Hephaistos_temple_2006.jpg" >
-                        <div class="quiz-content">
-                            
-                            <p class="quiz-category">Categoria: <span>Mitologia</span></p>
-                            <p class="quiz-description">
-                                ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
-                            </p>
-                        </div>
-                    </div>
+                    {% endfor %}
                 </div>
             </div>
         </div>
@@ -68,5 +64,10 @@
           </div>
         </div>
     </footer>
+    <script src="{% static "global/js/JQuery/jquery-3.7.1.js" %}"></script>
+    <script src="{% static "global/js/JQuery/jquery-migrate-3.5.2.js" %}"></script>
+    <script src="{% static "global/js/Slick/slick.js" %}"></script>
+    <script src="{%  static "global/js/scroll_quizes_slider.js" %}"></script>
+
 </body>
 </html>
