--- a/base_static/global/css/style.css
+++ b/base_static/global/css/style.css
@@ -49,6 +49,7 @@ html{
     font-size: 62.5%;
     color: var(--color-white);
     
+    
 }
 .border{
     border-radius: 1rem;
@@ -57,6 +58,7 @@ body{
     font-size: 1.6rem;
     font-family: var(--font-primary);
     background-color: var(--color-primary-dark);
+    overflow-x: hidden;
     
 }
 h1,h2,h3,h4,h5,h6{
@@ -159,6 +161,8 @@ h1,h2,h3,h4,h5,h6{
     background: var(--color-primary-dark-header);
     width: 100%;
     margin-top: auto;
+    position: absolute;
+    bottom: 0;
 }
 .footer{
     display: flex;
@@ -183,30 +187,75 @@ h1,h2,h3,h4,h5,h6{
     transform: scale(1.1);
 }
 /* quiz */
-
+.quizes-container{
+    position: relative;
+}
 .quizes{
-    background-color: red;
-    overflow-x: hidden;
+    overflow-x:auto;
     display: flex;
     height: fit-content;
     padding: 1rem 0;
-    gap: 2rem;
+
+    
+}
+.scroll-left, .scroll-right {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    width: 50px;
+    height: 50px;
+    font-size: 20px;
+    padding: 10px;
+    cursor: pointer;
+    z-index: 10;
+    transition: background-color 0.3s ease;
+    border-radius: 50%;
+    
+}
+.quizes::-webkit-scrollbar {
+    display: none;
+  }
+
+.quizes {
+    -ms-overflow-style: none;  
+    scrollbar-width: none;  
+  }
+.scroll-left:hover, .scroll-right:hover {
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+.scroll-left {
+    left: -2%; 
+}
+
+.scroll-right {
+    right: -2%;
 }
 .quiz-single{
     background-color: blue;
     width: fit-content;
     display: flex;
     flex-direction: column;
-    width: 50%;
+    min-width: 22rem;
     padding: 1.5rem;
     border-radius: 15px;
-    min-width: 20rem;
-    max-width: 30rem;
+    opacity: 0.8;
+    transform: scale(0.8);
     gap: 1.5rem;
-    cursor: pointer;
-    transition: all ease-in-out .2s;
+    transition: all ease-in-out .5s;
+    scroll-snap-align: center;
 }
-.quiz-single:hover{
+.quiz-single.current-item{
+    opacity: 1;
+    transform: scale(1);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    cursor: pointer;
+
+}
+.quiz-single.current-item:hover{
     transform: scale(1.02);
 }
 .single-img{
@@ -250,4 +299,7 @@ h1,h2,h3,h4,h5,h6{
         font-size: 1.7rem;
         text-align: center;
     }
+    /* .quizes{
+        pointer-events: none;
+    } */
 }
