--- a/base_static/global/css/style.css
+++ b/base_static/global/css/style.css
@@ -379,7 +379,7 @@ h1,h2,h3,h4,h5,h6{
 .question-container.Fácil::before{
     background: rgba(0, 92, 0, 0.752);
 }
-.question-container.True::before{
+.True::before{
     background: rgba(0, 92, 0, 0.752);
 }
 .question-container.Médio::before{
@@ -388,7 +388,7 @@ h1,h2,h3,h4,h5,h6{
 .question-container.Difícil::before{
     background: rgba(119, 8, 8, 0.812);
 }
-.question-container.False::before{
+.False::before{
     background: rgba(119, 8, 8, 0.812);
 }
 .question-title{
@@ -428,14 +428,41 @@ h1,h2,h3,h4,h5,h6{
     transform: scale(1.05);
 }
 
-/* @media  screen and (min-height:100vh){
-    .footer-container{
-        position: absolute;
-        bottom: 0;
-        margin-top: 3rem;
-    }
-} */
+.circular-chart {
+    margin: 0 auto;
+    z-index: 2;
+    width: 100%;
+    background: conic-gradient(rgb(19, 137, 19) 0% var(--percentage-correct), rgb(224, 5, 5) var(--percentage-correct) var(--percentage-incorrect));
+    border-radius: 50%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 100%;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  }
+  
+  .circle {
+    width: 80%;
+    height: 80%;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: var(--color-primary-dark);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px inset;
+  }
 
+  
+  .text {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: var(--color-gray-2);
+  }
+  
 @media  screen and (max-width:1000px) {
     .header .logo{
         font-size: 1.8rem;
@@ -461,7 +488,7 @@ h1,h2,h3,h4,h5,h6{
     .slick-slide {
         margin: 0 .5rem;
         padding: 1rem;
-        height: 100% !important;
+        height: fit-content !important;
     
     }
     /* .quizes{
@@ -489,6 +516,7 @@ h1,h2,h3,h4,h5,h6{
     .slick-slide{
         padding: 2rem;
         margin: 1rem;
+        height: 35rem !important;
     }
     .detail-quiz .title{
         font-size: 1.8rem;
@@ -502,6 +530,7 @@ h1,h2,h3,h4,h5,h6{
     .continue, .return{
         font-size: 1.25rem;
     }
+    
 }
 @media  screen and (max-width:350px) {
     
