--- a/base_templates/global/partials/header.html
+++ b/base_templates/global/partials/header.html
@@ -8,6 +8,10 @@
                     <i class="fa-solid fa-trophy"></i>
                 </a>
             </h2>
+            <form action="{% url 'authors:logout'%}" method="POST">
+                {% csrf_token %}
+                <button type="submit">Sair</button>
+            </form>
         </div>
     </div>
 </header>
