--- a/authors/templates/authors/pages/register_user.html
+++ b/authors/templates/authors/pages/register_user.html
@@ -1,9 +1,10 @@
 
 {% extends "global/base.html" %}
 {% block content %}
-    <div class="main container">
-        <h1 class="main_menssage">Create User</h1>
+    <div class="main container  form-container-container">
+        <h1 class="main_menssage">Criar Conta</h1>
+        <p class="new-user-msg">Você já possui uma conta? <a href="{% url 'authors:login' %}">Clique Aqui</a></p>
         {% include "global/partials/form.html" %}
-        <p class="new-user-msg">Do you already have an account? <a href="{% url 'authors:login' %}">Click here</a></p>
+        
     </div>
 {% endblock content %}
