refatoring code and add user profile stats

--- a/base_templates/global/partials/form.html
+++ b/base_templates/global/partials/form.html
@@ -25,7 +25,7 @@
         
         <div class="form-content form-content-grid">
             <div class="form-group">
-              <button type="submit" class="border">Send</button>
+              <button type="submit" class="border">Enviar</button>
             </div>
         </div>
         {% if is_login_page %}
